--- a/package.json
+++ b/package.json
@@ -3,25 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "npm run build-core && next build",
+    "dev": "node ./backend/dist/start/index.mjs dev",
+    "start": "node ./backend/dist/start start",
+    "build-core": "cd backend/src && tsc && cd ../../..",
+    "start-core": "node ./backend/dist/start/core",
+    "dev-next": "next dev",
+    "build-next": "next build",
+    "start-next": "next start"
   },
   "dependencies": {
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+
+    "@emotion/react": "^11.4.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.2",
-    "@emotion/react": "^11.4.1",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.3.0"
+
+    "@intutable/core": "^0.1.3",
+    "@intutable/database": "^1.1.1",
+    "@intutable/http": "^0.1.2",
+    "cors": "2.8.5",
+
+    "typescript": "^4.5.0-beta"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
-    "typescript": "4.4.4"
+    "@types/react": "17.0.33"
   }
 }
