refactor: move pages into src/pages, move test_data into src/lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       "@app/*": [
         "./*"
       ],
+      "@lib/*": [
+        "src/lib/*"
+      ],
       "@public/*": [
         "public/*"
       ],
