refactor: move components folder into src folder, also rename src/pages/test.tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
         "public/*"
       ],
       "@components/*": [
-        "components/*"
+        "src/components/*"
       ],
       "@auth/*": [
         "auth/*"
