chore: move theme into src
I mean, it's TS, it really doesn't make sense for it not to be in the src
folder.
Now it's worth considering putting auth into src also, but I'm not sure. Does
"hook" mean it's some kind of nextjs magic? I'll leave it for now.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,11 +35,8 @@
       "@auth/*": [
         "auth/*"
       ],
-      "@styles/*": [
-        "styles/*"
-      ],
       "@theme": [
-        "theme/index.ts"
+        "src/theme/index.ts"
       ]
     }
   },
