--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev-next": "next dev",
     "build-next": "next build",
     "start-next": "next start",
-    "db:setup": "sqlite3 data.db < backend/database/createDB.sql"
+    "db:setup": "rimraf data.db && sqlite3 data.db < backend/database/createDB.sql"
   },
   "dependencies": {
     "next": "12.0.1",
