--- a/backend/src/tsconfig.json
+++ b/backend/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "moduleResolution": "node",
-        "module": "es2020",
+        "module": "commonjs",
         "lib": ["es2020", "DOM"],
         "target": "es2019",
         "importsNotUsedAsValues": "error",
