--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "next": "12.0.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "rimraf": "3.0.2",
 
         "@emotion/react": "^11.4.1",
         "@emotion/server": "^11.4.0",
