--- a/package.json
+++ b/package.json
@@ -14,23 +14,21 @@
         "db:setup": "npx rimraf data.db && sqlite3 data.db < backend/database/createDB.sql"
     },
     "dependencies": {
-        "next": "12.0.1",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
-
         "@emotion/react": "^11.4.1",
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "@intutable/core": "^0.1.3",
+        "@intutable/database": "^1.1.1",
+        "@intutable/http": "^0.1.4",
+        "@intutable/project-management": "^0.1.0",
         "@mui/icons-material": "^5.0.1",
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
         "@mui/x-data-grid": "^5.0.0-beta.2",
-
-        "@intutable/core": "^0.1.3",
-        "@intutable/database": "^1.1.1",
-        "@intutable/http": "^0.1.4",
         "cors": "2.8.5",
-
+        "next": "12.0.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
         "typescript": "^4.4.4"
     },
     "devDependencies": {
