--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
             "@backend/*": ["backend/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules"]
+    "include": ["next-env.d.ts"],
+    "exclude": ["node_modules", "backend"]
 }
