--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@mui/x-data-grid": "^5.0.0-beta.2",
         "cors": "2.8.5",
         "next": "12.0.1",
+        "notistack": "^2.0.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "typescript": "^4.4.4"
