--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@mui/styles": "^5.0.1",
         "@mui/x-data-grid": "^5.0.0-beta.2",
         "cors": "2.8.5",
+        "js-cookie": "^3.0.1",
         "next": "11.0.1",
         "notistack": "^2.0.3",
         "react": "17.0.2",
