--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "@emotion/styled": "^11.3.0",
         "@intutable/core": "^0.1.3",
         "@intutable/database": "^1.1.1",
-        "@intutable/http": "file:../http-cors",
+        "@intutable/http": "0.1.4",
+        "@intutable/http-cors": "file:../http-cors",
         "@intutable/project-management": "^0.1.0",
         "@intutable/user-authentication": "file:../user-authentication",
         "@mui/icons-material": "^5.0.1",
