--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
         "@intutable/core": "^0.1.3",
         "@intutable/database": "^1.1.1",
         "@intutable/http": "0.1.4",
-        "@intutable/http-cors": "file:../http-cors",
+        "@intutable/http-cors": "0.1.0",
         "@intutable/project-management": "^0.1.0",
-        "@intutable/user-authentication": "file:../user-authentication",
+        "@intutable/user-authenticationuser-authentication": "0.1.1",
         "@mui/icons-material": "^5.0.1",
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
