--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
             "@components/*": ["src/components/*"],
             "@theme": ["src/theme/index.ts"],
             "@context/*": ["src/context/*"],
-            "@datagrid/*": ["src/components/DataGrid/*"]
+            "@datagrid/*": ["src/components/DataGrid/*"],
+            "@api": ["src/api/index.ts"]
         }
     },
     "include": ["src"],
