--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "typescript": "^4.4.4"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.6",
         "@types/react": "17.0.33",
