chore: fix typo and refactor constant to env vars

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 # .env
-NEXT_PUBLI_AUTH_COOKIE_KEY=connect.sid
+NEXT_PUBLIC_AUTH_COOKIE_KEY=connect.sid
+NEXT_PUBLIC_CORE_ENDPOINT_URL=http://localhost:8080
