--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@mui/icons-material": "^5.0.1",
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
+        "@mui/system": "^5.2.1",
         "@mui/x-data-grid": "^5.0.0-beta.2",
         "cors": "2.8.5",
         "js-cookie": "^3.0.1",
