--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
         "@emotion/styled": "^11.3.0",
         "@intutable/core": "^0.1.3",
         "@intutable/database": "^1.1.1",
-        "@intutable/http": "0.1.4",
-        "@intutable/http-cors": "0.1.0",
-        "@intutable/project-management": "0.3.5",
-        "@intutable/user-authenticationuser-authentication": "0.1.1",
+        "@intutable/http": "^0.1.4",
+        "@intutable/http-cors": "^0.1.0",
+        "@intutable/project-management": "^0.3.5",
+        "@intutable/user-authenticationuser-authentication": "^0.1.1",
         "@mui/base": "^5.0.0-alpha.59",
         "@mui/icons-material": "^5.0.1",
         "@mui/material": "^5.0.2",
