--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
         "@emotion/react": "^11.4.1",
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.3.0",
-        "@intutable/core": "^0.1.3",
-        "@intutable/database": "^1.1.1",
-        "@intutable/http": "0.1.4",
+        "@intutable/core": "^0.1.6",
+        "@intutable/database": "^1.2.2",
+        "@intutable/http": "^0.1.5",
         "@intutable/http-cors": "0.1.0",
-        "@intutable/project-management": "0.3.5",
-        "@intutable/user-authenticationuser-authentication": "0.1.1",
+        "@intutable/project-management": "0.3.7",
+        "@intutable/user-authentication": "0.1.2",
         "@mui/icons-material": "^5.0.1",
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
