--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 # .env
 NEXT_PUBLIC_AUTH_COOKIE_KEY=connect.sid
+NEXT_PUBLIC_USER_COOKIE_KEY=dekanat.mathinf.user
 NEXT_PUBLIC_CORE_ENDPOINT_URL=http://localhost:8080
