--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
         "@mui/x-data-grid": "^5.0.0-beta.2",
         "cors": "2.8.5",
         "js-cookie": "^3.0.1",
-        "next": "11.0.1",
+        "next": "^12.0.9",
         "notistack": "^2.0.3",
-        "react": "17.0.2",
+        "react": "^18.0.0-rc.0",
         "react-data-grid": "^7.0.0-beta.7",
         "react-dom": "17.0.2",
         "typescript": "^4.4.4"
