--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "notistack": "^2.0.3",
         "react": "^18.0.0-rc.0",
         "react-data-grid": "^7.0.0-beta.7",
-        "react-dom": "17.0.2",
+        "react-dom": "^18.0.0-rc.0",
         "typescript": "^4.4.4"
     },
     "devDependencies": {
