--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "build-next": "next build",
         "start-next": "next start",
         "db:setup": "npx rimraf data.db && sqlite3 data.db < database/createDB.sql",
-        "lint": "next lint"
+        "lint": "next lint",
+        "lint:fix": "npm run lint -- --fix",
+        "ci": "npm run lint && npm run build"
     },
     "dependencies": {
         "@emotion/react": "^11.4.1",
@@ -22,16 +24,14 @@
         "@intutable/database": "^1.2.2",
         "@intutable/http": "^0.1.5",
         "@intutable/http-cors": "0.1.0",
-        "@intutable/project-management": "0.3.7",
+        "@intutable/project-management": "0.4.0",
         "@intutable/user-authentication": "0.1.3",
         "@mui/base": "^5.0.0-alpha.65",
         "@mui/icons-material": "^5.0.1",
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
         "@mui/system": "^5.2.1",
-        "@mui/x-data-grid": "^5.0.0-beta.2",
         "cors": "2.8.5",
-        "js-cookie": "^3.0.1",
         "next": "^12.0.9",
         "notistack": "^2.0.3",
         "react": "^18.0.0-rc.0",
@@ -44,9 +44,12 @@
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.6",
         "@types/react": "17.0.33",
+        "@typescript-eslint/eslint-plugin": "^5.10.2",
         "eslint": "^7.32.0",
         "eslint-config-next": "12.0.3",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.28.0",
         "rimraf": "3.0.2"
     }
 }
