--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.3.0",
         "@intutable/core": "^0.1.6",
-        "@intutable/database": "^1.2.2",
+        "@intutable/database": "1.2.2",
         "@intutable/http": "^0.1.5",
         "@intutable/http-cors": "0.1.0",
         "@intutable/project-management": "0.4.0",
