--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
         "@typescript-eslint/no-explicit-any": "error",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/no-namespace": "off",
         "no-unused-vars": "off",
         "@typescript-eslint/no-empty-function": "off",
         "no-empty-function": "off",
