--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "typescript": "^4.4.4"
     },
     "devDependencies": {
+        "@next/bundle-analyzer": "^12.0.10",
         "@types/cors": "^2.8.12",
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.6",
