--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.28.0",
+        "prettier": "^2.5.1",
         "rimraf": "3.0.2"
     }
 }
