--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "private": true,
     "scripts": {
         "build": "npm run build-core && next build",
-        "dev": "npm run build-core && node ./dist/start/index dev",
+        "dev": "npm run start-db & npm run build-core && node ./dist/start/index dev",
         "start": "node ./dist/start start",
         "build-core": "cd src/backend && tsc && cd ../..",
         "start-core": "node ./dist/start/core",
+        "build-db": "cd database/ && sudo docker-compose build --pull",
+        "start-db": "npm run build-db && cd database/ && sudo docker-compose up",
         "dev-next": "next dev",
         "build-next": "next build",
         "start-next": "next start",
@@ -23,7 +25,7 @@
         "@intutable/database": "1.3.0",
         "@intutable/http": "^0.1.5",
         "@intutable/http-cors": "0.1.0",
-        "@intutable/project-management": "0.4.2",
+        "@intutable/project-management": "0.4.7",
         "@intutable/user-authentication": "0.1.3",
         "@mui/base": "^5.0.0-alpha.65",
         "@mui/icons-material": "^5.0.1",
