chore: remove sudos from package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "start": "node ./dist/start start",
         "build-core": "cd src/backend && tsc && cd ../..",
         "start-core": "node ./dist/start/core",
-        "build-db": "cd database/ && sudo docker-compose build --pull",
-        "start-db": "npm run build-db && cd database/ && sudo docker-compose up",
+        "build-db": "cd database/ && docker-compose build --pull",
+        "start-db": "npm run build-db && cd database/ && docker-compose up",
         "dev-next": "next dev",
         "build-next": "next build",
         "start-next": "next start",
