--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
         "@mui/styles": "^5.0.1",
         "@mui/system": "^5.2.1",
         "cors": "2.8.5",
+        "iron-session": "^6.1.1",
         "next": "^12.0.9",
         "notistack": "^2.0.3",
+        "octokit": "^1.7.1",
         "react": "^18.0.0-rc.0",
         "react-data-grid": "^7.0.0-beta.7",
         "react-dom": "^18.0.0-rc.0",
