--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "ci": "npm run lint && npm run build"
     },
     "dependencies": {
+        "14": "^3.1.6",
         "@emotion/css": "^11.7.1",
         "@emotion/react": "^11.4.1",
         "@emotion/server": "^11.4.0",
@@ -26,11 +27,12 @@
         "@intutable/database": "1.3.0",
         "@intutable/http": "^0.1.5",
         "@intutable/http-cors": "0.1.0",
-        "@intutable/project-management": "0.4.10",
         "@intutable/join-tables": "1.3.0",
+        "@intutable/project-management": "0.4.10",
         "@intutable/user-authentication": "0.1.3",
         "@mui/base": "^5.0.0-alpha.65",
         "@mui/icons-material": "^5.0.1",
+        "@mui/lab": "^5.0.0-alpha.75",
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
         "@mui/system": "^5.2.1",
