--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -5,6 +5,7 @@ services:
         build: .
         ports:
             - "5432:5432"
-        #volumes:
-        # TODO: Where to save the data?
-        # - ./database-data:/var/lib/postgresql/data
+        volumes:
+         - db-data:/var/lib/postgresql/data
+volumes:
+  db-data:
