refactor: package scripts

--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
         "build": "npm run build-core && next build",
         "dev": "npm run start-db & npm run build-core && node ./dist/start dev",
         "start": "node ./dist/start start",
-        "build-core": "cd src/backend && tsc && cd ../..",
-        "start-core": "node ./dist/start/core",
-        "build-db": "cd database/ && docker-compose build --pull",
-        "start-db": "npm run build-db && cd database/ && docker-compose up",
-        "dev-next": "next dev",
-        "build-next": "next build",
-        "start-next": "next start",
-        "lint": "next lint",
+        "build:core": "cd src/backend && tsc && cd ../..",
+        "start:core": "node ./dist/start/core",
+        "build:db": "cd database/ && docker-compose build --pull",
+        "start:db": "npm run build-db && cd database/ && docker-compose up",
+        "dev:next": "next dev",
+        "build:next": "next build",
+        "start:next": "next start",
+        "lint": "NODE_ENV=development next lint",
         "lint:fix": "npm run lint -- --fix",
-        "ci": "npm run lint && npm run build"
+        "lint:production": "NODE_ENV=production next lint"
     },
     "dependencies": {
         "@emotion/css": "^11.9.0",
