--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
-  "arrowParens": "avoid",
-  "semi": false,
-  "printWidth": 80,
-  "tabWidth": 4,
-  "singleQuote": false
+    "arrowParens": "avoid",
+    "semi": false,
+    "tabWidth": 4,
+    "singleQuote": false,
+    "printWidth": 80
 }
