fix: package.json

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "npm run build-core && next build",
-        "dev": "npm run start-db & npm run build-core && node ./dist/start dev",
+        "build": "npm run build:core && next build",
+        "dev": "npm run start:db & npm run build:core && node ./dist/start dev",
         "start": "node ./dist/start start",
         "build:core": "cd src/backend && tsc && cd ../..",
         "start:core": "node ./dist/start/core",
         "build:db": "cd database/ && docker-compose build --pull",
-        "start:db": "npm run build-db && cd database/ && docker-compose up",
+        "start:db": "npm run build:db && cd database/ && docker-compose up",
         "dev:next": "next dev",
         "build:next": "next build",
         "start:next": "next start",
