--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "@intutable/database": "^1.3.0",
         "@intutable/http": "^0.1.5",
         "@intutable/http-cors": "^0.1.0",
-        "@intutable/join-tables": "^1.4.0",
+        "@intutable/lazy-views": "^2.0.1",
         "@intutable/project-management": "^0.4.10",
         "@intutable/user-authentication": "^0.1.3",
         "@mui/base": "^5.0.0-alpha.76",
@@ -39,6 +39,7 @@
         "clsx": "^1.1.1",
         "cors": "^2.8.5",
         "iron-session": "^6.1.1",
+        "knex": "^1.0.1",
         "next": "^12.1.5",
         "notistack": "^2.0.4",
         "react": "^18.0.0",
