feat: backend start files isolated in backend folder

--- a/src/backend/tsconfig.json
+++ b/src/backend/tsconfig.json
@@ -13,6 +13,6 @@
         "baseUrl": ".",
         "allowJs": true,
         "checkJs": true,
-        "outDir": "../../dist"
+        "outDir": "./dist"
     }
 }
