--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "private": true,
     "scripts": {
         "build": "npm run build:core && next build",
-        "dev": "npm run start:db & npm run build:core && node ./src/backend/dist/start dev",
-        "start": "node ./src/backend/dist/start start",
-        "build:core": "cd src/backend && tsc && cd ../..",
-        "start:core": "node ./src/backend/dist/start/core",
+        "dev": "npm run start:db & npm run build:core && node ./src/backend/startup/dist dev",
+        "start": "node ./src/backend/startup/dist start",
+        "build:core": "cd src/backend/startup && tsc && cd ../dekanat-app-plugin && tsc && cd ../../..",
+        "start:core": "node ./src/backend/startup/dist/core",
         "build:db": "cd database/ && docker-compose build --pull",
         "start:db": "npm run build:db && cd database/ && docker-compose up",
         "reset-db": "cd database/ && docker-compose down && cd .. && docker volume rm database_db-data",
