--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "incremental": true,
         "baseUrl": "./src",
         "paths": {
+            "@backend/*": ["backend/dekanat-app-plugin/src/*"],
             "@datagrid/*": ["components/DataGrid/*"]
         }
     },
