--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "clsx": "^1.1.1",
         "cors": "^2.8.5",
         "iron-session": "^6.1.1",
+        "json2csv": "^5.0.7",
         "next": "^12.1.5",
         "notistack": "^2.0.4",
         "react": "^18.0.0",
@@ -55,6 +56,7 @@
         "@types/cors": "^2.8.12",
         "@types/jest": "^27.4.1",
         "@types/js-cookie": "^3.0.1",
+        "@types/json2csv": "^5.0.3",
         "@types/node": "^17.0.24",
         "@types/react": "^18.0.5",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
