refactor(AddColumnModal): set column attributes in endpoint, not in frontend

--- a/src/backend/dekanat-app-plugin/tsconfig.json
+++ b/src/backend/dekanat-app-plugin/tsconfig.json
@@ -9,7 +9,10 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "baseUrl": ".",
+        "baseUrl": "../../",
+        "paths": {
+            "@datagrid/*": ["components/DataGrid/*"]
+        },
         "allowJs": true,
         "checkJs": true,
         "outDir": "./dist"
