--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,6 @@
             "babel-plugin-direct-import",
             { "modules": ["@mui/material", "@mui/icons-material"] }
         ]
-    ]
+    ],
+    "ignore": ["node_modules", "public"]
 }
