--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
         "@mui/system": "^5.2.1",
+        "babel-plugin-direct-import": "^1.0.0",
         "clsx": "^1.1.1",
         "cors": "^2.8.5",
         "fs-extra": "^10.1.0",
