--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,3 +34,4 @@ build:
     rules:
         - if: $CI_COMMIT_BRANCH == "main"
         - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"
+        - if: $CI_COMMIT_BRANCH == "develop"
