--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "@types/react": "^18.0.5",
         "@types/tmp": "^0.2.3",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
+        "babel-plugin-import": "^1.13.5",
         "eslint": "^8.18.0",
         "eslint-config-next": "12.1.5",
         "eslint-config-prettier": "^8.3.0",
