--- a/.env.local
+++ b/.env.local
@@ -3,4 +3,4 @@ NEXT_PUBLIC_AUTH_COOKIE_KEY=connect.sid
 NEXT_PUBLIC_CORE_ENDPOINT_URL=http://localhost:8080
 NEXT_PUBLIC_API_URL=http://localhost:3000
 IRON_AUTH_SECRET=6RAw0qN^H=?9G~TtWC2A,,n3-T%,zM*-Q]iZ~L8#
-ANALYZE=true
+ANALYZE=false
