--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
         "@mui/system": "^5.2.1",
-        "babel-plugin-direct-import": "^1.0.0",
         "clsx": "^1.1.1",
         "cors": "^2.8.5",
         "fs-extra": "^10.1.0",
         "iron-session": "^6.1.1",
         "json2csv": "^5.0.7",
         "next": "^12.1.5",
+        "next-transpile-modules": "^9.0.0",
         "notistack": "^2.0.4",
         "react": "^18.0.0",
         "react-data-grid": "^7.0.0-beta.12",
@@ -67,7 +67,6 @@
         "@types/react": "^18.0.5",
         "@types/tmp": "^0.2.3",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
-        "babel-plugin-import": "^1.13.5",
         "cross-env": "^7.0.3",
         "eslint": "^8.18.0",
         "eslint-config-next": "12.1.5",
