--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-dnd": "^16.0.0",
         "react-dnd-html5-backend": "^16.0.0",
         "react-dom": "^18.0.0",
+        "react-spring": "^9.4.5",
         "swr": "^1.3.0",
         "tmp": "^0.2.1",
         "typescript": "^4.6.3"
