chore: added mui date pciker dependencies

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
         "@mui/material": "^5.0.2",
         "@mui/styles": "^5.0.1",
         "@mui/system": "^5.2.1",
+        "@mui/x-date-pickers": "^5.0.0-beta.4",
         "clsx": "^1.1.1",
         "cors": "^2.8.5",
+        "date-fns": "^2.29.1",
         "fs-extra": "^10.1.0",
         "iron-session": "^6.1.1",
         "json2csv": "^5.0.7",
