refactor: remove dead scripts, cleanly separate existing ones

--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "npm run build:core && next build",
-        "dev": "npm run start:db & npm run build:core && node ./src/backend/startup/dist dev",
-        "start": "npm run start:db & npm run build:core && node ./src/backend/startup/dist start",
+        "build": "npm run build:core && npm run build:db && next build",
         "build:core": "cd src/backend/startup && tsc && cd ../dekanat-app-plugin && tsc && cd ../../..",
+        "build:db": "cd database/ && docker-compose build --pull && cd ..",
+        "start": "npm run start:db & node ./src/backend/startup/dist start",
         "start:core": "node ./src/backend/startup/dist/core",
-        "build:db": "cd database/ && docker-compose build --pull",
-        "start:db": "npm run build:db && cd database/ && docker-compose up",
-        "reset-db": "cd database/ && docker-compose down && cd .. && docker volume rm database_db-data",
-        "dev:next": "next dev",
-        "build:next": "next build",
-        "start:next": "next start",
+        "start:db": "cd database/ && docker-compose up",
+        "dev": "npm run build:core && npm run build:db && (npm run start:db & node ./src/backend/startup/dist dev)",
         "lint": "NODE_ENV=development next lint",
         "lint:fix": "npm run lint -- --fix",
         "lint:production": "NODE_ENV=production next lint",
         "test": "jest",
-        "analyze": "cross-env ANALYZE=true next build"
+        "analyze": "cross-env ANALYZE=true next build",
+        "reset-db": "cd database/ && docker-compose down && cd .. && docker volume rm database_db-data"
     },
     "dependencies": {
         "@emotion/css": "^11.9.0",
