--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
         "build": "npm run build:core && npm run build:db && next build",
         "build:core": "cd src/backend/startup && tsc && cd ../dekanat-app-plugin && tsc && cd ../../..",
         "build:db": "cd database/ && docker-compose build --pull && cd ..",
-        "start": "npm run start:db & node ./src/backend/startup/dist start",
-        "start:core": "node ./src/backend/startup/dist/core",
-        "start:db": "cd database/ && docker-compose up",
-        "dev": "npm run build:core && npm run build:db && (npm run start:db & node ./src/backend/startup/dist dev)",
+        "start": "concurrently --kill-others \"npm:start-*\"",
+        "start-core": "node ./src/backend/startup/dist/core",
+        "start-db": "cd database/ && docker-compose up && cd ..",
+        "start-next": "next start",
+        "dev": "npm run build:core && npm run build:db && concurrently --kill-others \"npm:dev-*\"",
+        "dev-core": "node ./src/backend/startup/dist/core dev",
+        "dev-db": "cd database/ && docker-compose up && cd ..",
+        "dev-next": "next dev",
         "lint": "NODE_ENV=development next lint",
         "lint:fix": "npm run lint -- --fix",
         "lint:production": "NODE_ENV=production next lint",
@@ -51,7 +55,8 @@
         "react-spring": "^9.4.5",
         "swr": "^1.3.0",
         "tmp": "^0.2.1",
-        "typescript": "^4.6.3"
+        "typescript": "^4.6.3",
+        "concurrently": "^7.3.0"
     },
     "devDependencies": {
         "@mui/codemod": "^5.8.5",
