--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
     "scripts": {
         "build": "npm run build --workspaces",
         "start": "concurrently --kill-others \"npm:start-*\"",
-        "start-core": "node ./backend/dist/index.js",
+        "start-core": "node ./backend/dist/index",
         "start-db": "cd database/ && docker-compose up && cd ..",
         "start-gui": "npm run start -w gui",
         "dev": "npm run build -w backend && npm run build -w dekanat-app-plugin && npm run build -w database && concurrently --kill-others \"npm:dev-*\"",
-        "dev-core": "node ./src/backend/startup/dist/core dev",
+        "dev-core": "npm run start-core",
         "dev-db": "cd database/ && docker-compose up && cd ..",
         "dev-gui": "npm run dev -w gui",
         "lint": "npm run lint -w gui",
         "lint:fix": "npm run lint:fix -w gui",
         "lint:production": "npm run lint:production -w gui",
         "analyze": "npm run analyze -w gui",
-        "test": "npm run test --workspaces --if-present",
-        "reset-db": "npm run reset -w database"
+        "test": "npm run test --workspaces --if-present"
     },
     "dependencies": {
         "@intutable/core": "^0.1.6",
