feat: GUI can import plugin's source files directly

--- a/gui/tsconfig.json
+++ b/gui/tsconfig.json
@@ -16,6 +16,7 @@
         "incremental": true,
         "baseUrl": "./src",
         "paths": {
+            "@backend/*": ["../../dekanat-app-plugin/src/*"],
             "@datagrid/*": ["components/DataGrid/*"]
         }
     },
