--- a/gui/package.json
+++ b/gui/package.json
@@ -41,6 +41,7 @@
     },
     "devDependencies": {
         "@mui/codemod": "^5.8.5",
+        "ts-loader": "^9.3.1",
         "@next/bundle-analyzer": "^12.2.0",
         "@types/fs-extra": "^9.0.13",
         "@types/js-cookie": "^3.0.1",
