--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "cross-env NODE_ENV=development eslint src",
+        "lint-fix": "npm run lint -- --fix",
+        "lint-production": "cross-env NODE_ENV=production eslint src"
     }
 }
