--- a/dekanat-app-plugin/package.json
+++ b/dekanat-app-plugin/package.json
@@ -1,10 +1,13 @@
 {
-    "name": "dekanat-app-backend",
+    "name": "dekanat-app-plugin",
     "version": "0.1.0",
     "private": true,
     "main": "./dist/index.js",
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "cross-env NODE_ENV=development eslint src",
+        "lint-fix": "npm run lint -- --fix",
+        "lint-production": "cross-env NODE_ENV=production eslint src"
     },
     "dependencies": {
         "@intutable/core": "^0.1.6",
