--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-.next/
-/**/node_modules
-/**/dist
-data.db
 .DS_Store
 .log/
-
-# Database stuff for now
-./database/database-data
+/**/node_modules
+/**/dist
+gui/.next/
+gui/.swc/
