--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "scripts": {
         "build": "tsc",
+        "start": "node dist/index.js",
+        "dev": "npx nodemon -c nodemon.json",
         "lint": "cross-env NODE_ENV=development eslint src",
         "lint-fix": "npm run lint -- --fix",
         "lint-production": "cross-env NODE_ENV=production eslint src"
