--- a/dekanat-app-plugin/package.json
+++ b/dekanat-app-plugin/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "build": "tsc",
         "lint": "cross-env NODE_ENV=development eslint src",
-        "lint-fix": "npm run lint -- --fix",
-        "lint-production": "cross-env NODE_ENV=production eslint src"
+        "lint:fix": "npm run lint -- --fix",
+        "lint:production": "cross-env NODE_ENV=production eslint src"
     },
     "dependencies": {
         "@intutable/core": "^0.1.6",
