--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "dev": "npm run build -w database && concurrently --kill-others \"npm run start -w database\" \"npm run dev -w backend\" \"npm run dev -w gui\"",
         "lint": "npm run lint -ws --if-present",
         "lint:fix": "npm run lint:fix -ws --if-present",
-        "lintproduction": "npm run lint:production -ws --if-present",
+        "lint:production": "npm run lint:production -ws --if-present",
         "analyze": "npm run analyze -w gui",
         "test": "npm run test -ws --if-present"
     },
