--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dekanat-app",
-    "version": "0.1.0",
+    "version": "0.1.0-alpha.3",
     "private": true,
     "scripts": {
         "build": "npm run build:core && next build",
