--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
     - build
 
 before_script:
+    - npm config set //${CI_SERVER_HOST}/api/v4/projects/29926955/packages/npm/:_authToken ${CI_JOB_TOKEN}
     - npm install
 
 lint:
