--- a/gui/package.json
+++ b/gui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gui",
-    "version": "0.1.0",
+    "version": "1.0.0-alpha.1",
     "private": "true",
     "scripts": {
         "build": "next build",
@@ -8,7 +8,7 @@
         "dev": "next dev",
         "lint": "cross-env NODE_ENV=development next lint -c ../.eslintrc.js",
         "lint:fix": "npm run lint -- --fix",
-        "lint:production": "cross-env NODE_ENV=production next lint",        
+        "lint:production": "cross-env NODE_ENV=production next lint",
         "analyze": "cross-env ANALYZE=true next build",
         "test": "jest"
     },
