--- a/dekanat-app-plugin/package.json
+++ b/dekanat-app-plugin/package.json
@@ -11,11 +11,11 @@
     },
     "dependencies": {
         "@intutable/core": "^0.1.6",
-        "@intutable/database": "^1.3.0",
+        "@intutable/database": "^3.0.0",
+        "@intutable/project-management": "^1.1.0",
+        "@intutable/lazy-views": "^5.1.0",
         "@intutable/http": "^0.1.5",
         "@intutable/http-cors": "^0.1.0",
-        "@intutable/lazy-views": "^4.1.0-single-connection",
-        "@intutable/project-management": "0.4.10",
         "@intutable/user-authentication": "^0.1.3"
     }
 }
