--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "npx nodemon -c nodemon.json",
+        "dev": "npx nodemon -c nodemon.json dev",
         "lint": "cross-env NODE_ENV=development eslint src",
         "lint:fix": "npm run lint -- --fix",
         "lint:production": "cross-env NODE_ENV=production eslint src"
