--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "dependencies": {
         "@intutable/core": "^0.1.6",
         "@intutable/database": "^3.0.0",
-        "@intutable/project-management": "^1.1.0",
-        "@intutable/lazy-views": "^5.1.0",
         "@intutable/http": "^0.1.5",
         "@intutable/http-cors": "^0.1.0",
+        "@intutable/lazy-views": "^5.1.0",
+        "@intutable/project-management": "^1.1.0",
         "@intutable/user-authentication": "^0.1.3",
-        "typescript": "^4.6.3",
-        "concurrently": "^7.3.0"
+        "concurrently": "^7.3.0",
+        "typescript": "^4.6.3"
     },
     "devDependencies": {
+        "@types/jest": "^27.4.1",
+        "@typescript-eslint/eslint-plugin": "^5.10.2",
         "cross-env": "^7.0.3",
         "eslint": "^8.18.0",
-        "@typescript-eslint/eslint-plugin": "^5.10.2",
         "eslint-config-next": "12.1.5",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.28.0",
-        "prettier": "^2.5.1",
         "jest": "^27.1.4",
-        "@types/jest": "^27.4.1",
-        "ts-jest": "^27.1.4",
         "nodemon": "^2.0.19",
+        "prettier": "^2.5.1",
+        "ts-jest": "^27.1.4",
         "ts-node": "^10.9.1"
     }
 }
