fix: cannot load backend plugin

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,4 +1,7 @@
 {
+    "references": [
+        { "path": "../shared" }
+    ],
     "compilerOptions": {
         "moduleResolution": "node",
         "module": "commonjs",
