--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "tsc",
+        "build": "tsc --build",
         "start": "node dist/index.js",
         "dev": "npx nodemon -c nodemon.json dev",
         "lint": "cross-env NODE_ENV=development eslint src",
