--- a/dekanat-app-plugin/package.json
+++ b/dekanat-app-plugin/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "main": "./dist/index.js",
     "scripts": {
-        "build": "tsc",
+        "build": "tsc --build",
         "lint": "cross-env NODE_ENV=development eslint src",
         "lint:fix": "npm run lint -- --fix",
         "lint:production": "cross-env NODE_ENV=production eslint src"
