--- a/gui/package.json
+++ b/gui/package.json
@@ -6,7 +6,7 @@
         "build": "next build",
         "start": "next start",
         "dev": "next dev",
-        "lint": "cross-env NODE_ENV=development next lint -c ../.eslintrc.js",
+        "lint": "cross-env NODE_ENV=development next lint",
         "lint:fix": "npm run lint -- --fix",
         "lint:production": "cross-env NODE_ENV=production next lint",
         "analyze": "cross-env ANALYZE=true next build",
