--- a/gui/package.json
+++ b/gui/package.json
@@ -6,6 +6,7 @@
         "build": "next build",
         "start": "next start",
         "dev": "next dev",
+        "dev:inspect": "NODE_OPTIONS='--inspect' next dev",
         "lint": "cross-env NODE_ENV=development next lint",
         "lint:fix": "npm run lint -- --fix",
         "lint:production": "cross-env NODE_ENV=production next lint",
