--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "@intutable/project-management": "^1.1.0",
         "@intutable/user-authentication": "^2.0.0",
         "concurrently": "^7.3.0",
-        "typescript": "^4.6.3"
+        "typescript": "^4.6.3",
+        "date-fns": "^2.29.1"
     },
     "devDependencies": {
         "@types/jest": "^27.4.1",
