--- a/dekanat-app-plugin/package.json
+++ b/dekanat-app-plugin/package.json
@@ -6,6 +6,8 @@
     "main": "./dist/index.js",
     "scripts": {
         "build": "tsc --build --force",
+        "test": "docker-compose up -d && npx jest; docker-compose down --volumes",
+        "build:db": "docker-compose build --pull",
         "lint": "cross-env NODE_ENV=development eslint src",
         "lint:fix": "npm run lint -- --fix",
         "lint:production": "cross-env NODE_ENV=production eslint src"
