--- a/gui/package.json
+++ b/gui/package.json
@@ -40,6 +40,7 @@
         "react-spring": "^9.4.5",
         "swr": "^1.3.0",
         "tmp": "^0.2.1",
+        "shared": "file:../shared",
         "dekanat-app-plugin": "../dekanat-app-plugin"
     },
     "devDependencies": {
