--- a/gui/tsconfig.json
+++ b/gui/tsconfig.json
@@ -17,8 +17,8 @@
         "baseUrl": "./src",
         "experimentalDecorators": true,
         "paths": {
-            "@shared/*": ["../../shared/src/*"],
-            "@backend/*": ["../../dekanat-app-plugin/src/*"],
+            "@shared/*": ["../../shared/dist/*"],
+            "@backend/*": ["../../dekanat-app-plugin/dist/*"],
             "@datagrid/*": ["components/DataGrid/*"]
         }
     },
