--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,5 +1,8 @@
 {
-    "include": ["./src/**/*.ts"],
+    "include": [
+        "./src/**/*.ts",
+        "../dekanat-app-plugin/src/transform/Numeric.ts"
+    ],
     "compilerOptions": {
         "moduleResolution": "node",
         "module": "commonjs",
