feat: use new plugin versions
- database 4.0.0: creates its own connection IDs, no real functional changes
- project-management 2.0.0: users table renamed to "roles", no longer
  contains passwords, roles are now only for grouping tables.
- user-authentication 3.0.0: now stores its own users instead of directly
  `select`ing from project-management's internal tables
=> app now has one single role (in PM's table) that has all projects. That way,
  the permission plugin has free rein to implement user:role relations any
  way it likes
- lazy-views 6.0.0, http 0.2.0: no real changes, just update to match the above
  versions.

--- a/shared/config.json
+++ b/shared/config.json
@@ -2,5 +2,6 @@
     "databaseAdminUsername": "admin",
     "databaseAdminPassword": "admin",
     "appAdminUsername": "admin@dekanat.de",
-    "appAdminPassword": "password"
+    "appAdminPassword": "password",
+    "projectManagementRoleId": 1
 }
