--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,16 @@
 # Ignore artifacts:
-dist
-build
-coverage
+**/dist/
+**/build/
+**/node_modules
+**/coverage
+**/coverage/
+**/test/fixtures
+**/docs/
+**/protos/
+**/.DS_Store
+**/.log/
+/**/tsconfig.tsbuildinfo
+gui/.next/
+gui/.swc/
+**/tsconfig.json
+**/docker-compose.yml
