--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.28.0",
         "jest": "^27.1.4",
+        "madge": "^5.0.1",
         "nodemon": "^2.0.19",
         "prettier": "^2.5.1",
         "ts-jest": "^27.1.4",
