--- a/shared/package.json
+++ b/shared/package.json
@@ -4,6 +4,7 @@
     "description": "source code shared across frontend and backend.",
     "private": true,
     "scripts": {
+        "build": "tsc",
         "lint": "cross-env NODE_ENV=development eslint src",
         "lint:fix": "npm run lint -- --fix",
         "lint:production": "cross-env NODE_ENV=production eslint src"
