--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@intutable/user-authentication": "^3.0.0",
         "concurrently": "^7.3.0",
         "date-fns": "^2.29.1",
+        "next": "^12.3.4",
         "typescript": "^4.6.3"
     },
     "devDependencies": {
