chore: turn on source map generation for debugging

--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -3,6 +3,7 @@
         "./src/**/*.ts"
     ],
     "compilerOptions": {
+        "sourceMap": true,
         "moduleResolution": "node",
         "module": "commonjs",
         "lib": ["es2020", "DOM"],
