--- a/dekanat-app-plugin/tsconfig.json
+++ b/dekanat-app-plugin/tsconfig.json
@@ -4,6 +4,7 @@
     ],
     "include": ["./src/**/*.ts"],
     "compilerOptions": {
+        "sourceMap": true,
         "moduleResolution": "node",
         "module": "commonjs",
         "lib": ["es2020", "DOM"],
