--- a/gui/tsconfig.json
+++ b/gui/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "sourceMap": true,
         "target": "ES6",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
